--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
-      "@lib/*": ["src/lib/*"]
+      "@lib/*": ["src/lib/*"],
+      "@slices": ["src/slices"],
+      "@slices/*": ["src/slices/*"]
     }
   }
 }
