--- a/biome.json
+++ b/biome.json
@@ -69,6 +69,9 @@
       "cssModules": false,
       "tailwindDirectives": true
     },
+    "formatter": {
+      "enabled": true
+    },
     "linter": {
       "enabled": true
     }
