--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.2",
+    "@astrojs/sitemap": "^3.6.0",
     "@mantine/core": "^8.3.0",
     "@mantine/hooks": "^8.3.0",
     "@prismicio/client": "^7.21.0",
