--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mantine/hooks": "^8.3.0",
     "@prismicio/client": "^7.21.0",
     "astro": "^5.16.0",
+    "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
