--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prismicio/client": "^7.21.0",
     "astro": "^5.16.0",
     "clsx": "^2.1.1",
+    "fuse.js": "^7.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
