--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.1",
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
     "@mantine/core": "^8.3.0",
