--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astro-app",
+  "name": "bankgreen-astro",
   "type": "module",
   "version": "0.0.1",
   "packageManager": "pnpm@10.25.0",
@@ -16,6 +16,7 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.12",
     "@astrojs/node": "^9.5.1",
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
@@ -36,6 +37,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "tailwindcss": "^4.1.0",
-    "typescript": "^5.7.0"
+    "typescript": "^5.7.0",
+    "wrangler": "^4.54.0"
   }
 }
