--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bankgreen-astro",
   "type": "module",
   "version": "0.0.1",
-  "packageManager": "pnpm@10.25.0",
+  "packageManager": "pnpm@10.26.1",
   "engines": {
     "node": ">=20"
   },
@@ -22,6 +22,7 @@
     "@astrojs/sitemap": "^3.6.0",
     "@mantine/core": "^8.3.0",
     "@mantine/hooks": "^8.3.0",
+    "@phosphor-icons/react": "^2.1.10",
     "@prismicio/client": "^7.21.0",
     "@prismicio/helpers": "^2.3.9",
     "astro": "^5.16.0",
