--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "astro": "^5.16.0",
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
+    "html-react-parser": "^5.2.11",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
