--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prismicio/client": "^7.21.0",
     "@prismicio/helpers": "^2.3.9",
     "@prismicio/richtext": "^2.1.5",
+    "@typeform/embed": "^5.10.0",
     "astro": "^5.16.0",
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
