--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@astrojs/sitemap": "^3.6.0",
     "@mantine/core": "^8.3.0",
     "@mantine/hooks": "^8.3.0",
+    "@marsidev/react-turnstile": "^1.4.0",
     "@phosphor-icons/react": "^2.1.10",
     "@prismicio/client": "^7.21.0",
     "@prismicio/helpers": "^2.3.9",
