--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mantine/core": "^8.3.0",
     "@mantine/hooks": "^8.3.0",
     "@marsidev/react-turnstile": "^1.4.0",
+    "@nanostores/react": "^1.0.0",
     "@phosphor-icons/react": "^2.1.10",
     "@prismicio/client": "^7.21.0",
     "@prismicio/helpers": "^2.3.9",
@@ -36,6 +37,7 @@
     "fuse.js": "^7.1.0",
     "html-react-parser": "^5.2.11",
     "lottie-react": "^2.4.1",
+    "nanostores": "^1.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
