--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
     "html-react-parser": "^5.2.11",
+    "htmlparser2": "^10.0.0",
     "lottie-react": "^2.4.1",
     "nanostores": "^1.1.0",
     "react": "^19.0.0",
