--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
     "@mantine/core": "^8.3.0",
+    "@mantine/form": "^8.3.10",
     "@mantine/hooks": "^8.3.0",
     "@marsidev/react-turnstile": "^1.4.0",
     "@nanostores/react": "^1.0.0",
@@ -38,9 +39,11 @@
     "html-react-parser": "^5.2.11",
     "htmlparser2": "^10.0.0",
     "lottie-react": "^2.4.1",
+    "mantine-form-zod-resolver": "^1.3.0",
     "nanostores": "^1.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
