--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
 
       - name: Build
         run: pnpm build
+        env:
+          PUBLIC_CLOUDFLARE_CAPTCHA_SITEKEY: ${{ vars.PUBLIC_CLOUDFLARE_CAPTCHA_SITEKEY }}
+          PUBLIC_GRAPHQL_ENDPOINT: ${{ vars.PUBLIC_GRAPHQL_ENDPOINT }}
 
       - name: Deploy to Cloudflare Workers
         run: pnpm wrangler deploy
